fix: scrollbar display and width
- Display set to none
- Width set to 0 to avoid content displacement

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -35,31 +35,17 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  scrollbar-width: none;
+  scrollbar-color: transparent transparent;
 }
 
-nav {
-  width: 100%;
-  font-size: 12px;
-  text-align: center;
-  margin-top: 2rem;
+::-webkit-scrollbar {
+  width: 0;
 }
 
-nav a.router-link-exact-active {
-  color: var(--color-text);
-}
-
-nav a.router-link-exact-active:hover {
+::-webkit-scrollbar-thumb {
   background-color: transparent;
-}
-
-nav a {
-  display: inline-block;
-  padding: 0 1rem;
-  border-left: 1px solid var(--color-border);
-}
-
-nav a:first-of-type {
-  border: 0;
 }
 
 button {
